--- a/new_product.html
+++ b/new_product.html
@@ -60,19 +60,19 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="reports.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="Orders.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Orders</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="new_sale.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">New Sale</span>
                     </a>
@@ -91,9 +91,9 @@
                 </a>
             </div>
         </aside>
-        <div class="main">
-            <div class="row justify-content-center align-items-center" style="height: 8vh; background-color: #c2ddf5;">
-                <div class="col-10">
+        <div class="main" id="bg">
+            <div class="row align-items-center" id="Navbar">
+                <div class="col-11">
                     <div class="row justify-content-center align-items-center">
                         <div class="col"></div>
                         <div class="col-5" style="height: auto;">
@@ -103,26 +103,26 @@
                         <div class="col-5"></div>
                     </div>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col d-flex justify-content-center align-items-center" style="height: 100%;">
-                    <div class="dropdown dropleft">
-                        <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i><img height="30px" width="30px" src="images/icons8-notification (3).svg" alt=""></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
-                            <li class="dropdown-header">Notifications</li>
-                            <li><a class="dropdown-item" href="#">New message received</a></li>
-                            <li><a class="dropdown-item" href="#">Server alert</a></li>
-                            <li><a class="dropdown-item" href="#">Update available</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-center" href="#">View all</a></li>
-                        </ul>
+                <div class="col d-flex justify-content-center align-items-center" style="height: auto;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dropdown dropleft">
+                                <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i><img height="30px" width="28px" src="images/icons8-notification (3).svg" alt=""></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
+                                    <li class="dropdown-header">Notifications</li>
+                                    <li><a class="dropdown-item" href="#">New message received</a></li>
+                                    <li><a class="dropdown-item" href="#">Server alert</a></li>
+                                    <li><a class="dropdown-item" href="#">Update available</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-center" href="#">View all</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
                     </div>
                 </div>
-                <div class="col"><a href="account_details.html"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></a></div>
-                <div class="col"></div>
             </div>
             <div class="row" style="height: 100%;background-color: #c2ddf5;">
                 <div class="col">
@@ -148,7 +148,7 @@
                               </div>
                               <div class="mb-3">
                                 <label for="productSellingPrice" class="form-label">Selling Price</label>
-                                <input type="text" class="form-control" id="productUnit" required>
+                                <input type="text" class="form-control" id="productSellingPrice" required>
                               </div>
                               <div class="mb-3">
                                 <label for="thresholdValue" class="form-label">Threshold Value</label>
