--- a/new_sale.html
+++ b/new_sale.html
@@ -204,7 +204,12 @@
                     </main>
                 </div>
                 <div class="col d-flex justify-content-center align-items-center">
-                    <img src="images/undraw_empty_cart_co35.svg" alt="" style="height: 50vh;">
+                    <div class="row" style="height: auto;">
+
+                    </div>
+                    <div class="row">
+                        <img src="images/undraw_empty_cart_co35.svg" alt="" style="height: 50vh;">
+                    </div>
                 </div>
             </div>
         </div>
