--- a/landing.html
+++ b/landing.html
@@ -85,7 +85,7 @@
         <div class="row" id="navbar-container">
             <div class="col-11" id="navbar">
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="#">InvenHub</a>
+                    <a class="navbar-brand" href="dashboard.html">InvenHub</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
