--- a/admin.html
+++ b/admin.html
@@ -185,7 +185,7 @@
             <div class="card-body">
                 {% if store_details %}
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>Store Name</th>
