--- a/dashboard.html
+++ b/dashboard.html
@@ -210,49 +210,49 @@
                                     </thead>
                                     <tbody id="ordersTable">
                                         <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
-                                        <tr>
-                                            <td style="width: 10%;">1</td>
-                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
-                                            <td style="width: 10%;">3</td>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
+                                        </tr>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 5%;">3</td>
+                                        </tr>
+                                            <td style="width: 5%;">1</td>
+                                            <td style="width: 95%; display: flex; justify-content: space-evenly;">Lays lays</td>    
+                                            <td style="width: 5%;">3</td>
                                         </tr>
                                     </tbody>
                                 </table>
